# ApplicationStatus

./: .gitignore  README.md  pyproject.toml
src/application_status/: __init__.py  application_status.py  web_server.py
tests/: conftest.py  web_request.py
tests/appstatus/: test_appstatus.py
tests/webserver/: test_webserver.py
